[gd_scene load_steps=7 format=2]

[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://NewGameMenu.gd" type="Script" id=2]
[ext_resource path="res://button_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://theme_noBorderFocus.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Node"]
script = ExtResource( 2 )
world_scene = "res://World.tscn"
menu_scene = "res://Menu.tscn"

[node name="Node" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 60.0
margin_right = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplit" type="VBoxContainer" parent="Node"]
margin_right = 824.0
margin_bottom = 540.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="Node/HSplit"]
margin_right = 824.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.552941, 0.0784314, 1 )
text = "Nova Partida"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Node/HSplit"]
margin_top = 97.0
margin_right = 824.0
margin_bottom = 540.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Node/HSplit/CenterRow"]
margin_left = 217.0
margin_right = 606.0
margin_bottom = 443.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="Node/HSplit/CenterRow/Buttons"]
margin_right = 389.0
margin_bottom = 40.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Tria la mida del món:"
align = 1

[node name="Short" type="Button" parent="Node/HSplit/CenterRow/Buttons"]
margin_top = 70.0
margin_right = 389.0
margin_bottom = 116.0
rect_min_size = Vector2( 250, 35 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.713726, 0.698039, 0.666667, 1 )
custom_colors/font_color = Color( 0.854902, 0.65098, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Curt"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mid" type="Button" parent="Node/HSplit/CenterRow/Buttons"]
margin_top = 146.0
margin_right = 389.0
margin_bottom = 192.0
rect_min_size = Vector2( 205, 35 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.713726, 0.698039, 0.666667, 1 )
custom_colors/font_color = Color( 0.854902, 0.65098, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Mitjà"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Long" type="Button" parent="Node/HSplit/CenterRow/Buttons"]
margin_top = 222.0
margin_right = 389.0
margin_bottom = 268.0
rect_min_size = Vector2( 122, 35 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.713726, 0.698039, 0.666667, 1 )
custom_colors/font_color = Color( 0.854902, 0.65098, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Llarg"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2" type="CenterContainer" parent="Node/HSplit/CenterRow/Buttons"]
margin_top = 298.0
margin_right = 389.0
margin_bottom = 443.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="Node/HSplit/CenterRow/Buttons/Node2"]
margin_left = 45.0
margin_top = 49.0
margin_right = 344.0
margin_bottom = 95.0
rect_min_size = Vector2( 122, 35 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.713726, 0.698039, 0.666667, 1 )
custom_colors/font_color = Color( 0.854902, 0.65098, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Tornar al menú"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/fade_in = SubResource( 2 )
[connection signal="pressed" from="Node/HSplit/CenterRow/Buttons/Short" to="." method="_on_Button_pressed" binds= [ "short" ]]
[connection signal="pressed" from="Node/HSplit/CenterRow/Buttons/Mid" to="." method="_on_Button_pressed" binds= [ "mid" ]]
[connection signal="pressed" from="Node/HSplit/CenterRow/Buttons/Long" to="." method="_on_Button_pressed" binds= [ "long" ]]
[connection signal="pressed" from="Node/HSplit/CenterRow/Buttons/Node2/Back" to="." method="_on_Back_pressed"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
